added the account folder from default jhipster and modified its register interface to fit our needs, made some changes to the auth system too by searching the users via email

--- a/src/main/webapp/i18n/en/register.json
+++ b/src/main/webapp/i18n/en/register.json
@@ -1,6 +1,32 @@
 {
   "register": {
     "title": "Registration",
+    "nom": {
+      "label": "Last Name",
+      "required": "Last name is required."
+    },
+    "prenom": {
+      "label": "First Name",
+      "required": "First name is required."
+    },
+    "password": {
+      "label": "Password",
+      "required": "Password is required."
+    },
+    "confirmPassword": {
+      "label": "Confirm Password",
+      "required": "Confirmation is required."
+    },
+    "email": {
+      "invalid": "Invalid email address"
+    },
+    "role": {
+      "label": "Account Type",
+      "options": {
+        "NORMAL_USER": "Personal Account",
+        "PROFESSIONAL_USER": "Professional Account"
+      }
+    },
     "form": {
       "button": "Register"
     },
