corrected admin authentication problems

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -14,7 +14,8 @@
         "utilisateurCompte": "Utilisateur Compte",
         "transaction": "Transaction",
         "log": "Log",
-        "alerteSecurite": "Alerte Securite"
+        "alerteSecurite": "Alerte Securite",
+        "admin-dashboard": "Admin Dashboard"
       },
       "account": {
         "main": "Account",
